feat(commands): Use brigadier instead
# Conflicts:
#	bukkit/build.gradle.kts